projects/elements/src/tag/tag.css
:host {
  --background: color-mix(in oklab, var(--color) var(--nve-sys-contrast-mute-ratio), var(--nve-sys-contrast-mute-color));
  --nve-sys-interaction-state-base: var(--background);
  --color: var(--nve-ref-color-blue-cobalt-1100);
  --gap: var(--nve-ref-space-xs);
  --font-size: var(--nve-ref-font-size-100);
  --padding: 0 var(--nve-ref-size-200);
  --border-radius: var(--nve-ref-border-radius-lg);
  --font-weight: var(--nve-ref-font-weight-regular);
  --cursor: pointer;
  --height: var(--nve-ref-size-600);
  display: inline-flex;
  user-select: none;
}

[internal-host] {
  font-weight: var(--font-weight);
  font-size: var(--font-size);
  gap: var(--gap);
  background: var(--background);
  color: color-mix(in oklab, var(--color), var(--nve-sys-text-emphasis-color) 16%);
  padding: var(--padding);
  border-radius: var(--border-radius);
  cursor: var(--cursor);
  height: var(--height);
  display: inline-flex;
  align-items: center;
  line-height: 1em;
  place-items: center;
  place-content: center;
  white-space: nowrap;
}

::slotted([nve-text]) {
  color: inherit !important;
}

nve-icon {
  --color: inherit;
  cursor: var(--cursor);
}

:host([readonly]) {
  --text-decoration: none;
  --cursor: cursor;
}

